--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
     "name": "socket.io-chat",
     "version": "0.1",
     "description": "chat client",
+    "scripts": {
+        "start": "node index.js"
+      },
     "dependencies": {
         "express": "4.16.3",
         "mongodb": "^3.0.3",
         "socket.io": "2.0.4"
     }
+    
 }
